--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.min.js"></script>
-    <title>Document</title>
+    <style>
+        body {
+            margin: 0;
+        }
+        .hidden {
+            display: none !important;
+        }
+
+        h1 {
+            color: #fff;
+            font-size: 56px;
+        }
+
+        .winner {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            z-index: 1;
+            height: 100vh;
+            width: 100vw;
+        }
+    
+    </style>
 </head>
 <body>
-    
+    <div class="winner hidden">
+        <h1>You Win!!</h1>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
